--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     }
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "less": "^4.1.0",
     "normalize.css": "^8.0.1",
@@ -57,6 +59,7 @@
     "less-loader": "^7.3.0",
     "lint-staged": "^10.5.3",
     "prettier": "2.2.1",
+    "redux-logger": "^3.0.6",
     "style-loader": "^2.0.0",
     "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0",
