--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     }
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@webpack-cli/serve": "^1.2.2",
