--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@svgr/webpack": "^5.5.0",
     "@webpack-cli/serve": "^1.2.2",
     "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.1.0",
